# PRLMAD

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  DESIGN.md  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.py  run_cli.py  run_web.py  streamlit_app.py  tailwind.config.cjs
deploy/: nginx-prlmad.conf  prlmad.service
frontend/: styles.css
scripts/: check-assets.mjs  copy-vendor.mjs
server/: dependencies.py  main.py
server/models/: schemas.py
server/routers/: chat.py  evaluate.py  generate.py  knowledge.py  os_lab.py  session.py  tutor.py
server/utils/: sse.py
src/prlmad/: __init__.py  agents.py  app.py  cli.py  config.py  knowledge_base.py  pdf_loader.py  safety.py  session_store.py  spark_client.py  text_splitter.py  training.py
src/prlmad/web/: app.js  index.html  style.css
static/css/: app.css
static/js/: ai-renderer.js  app.js  chat.js
templates/: base.html
templates/components/: learning_motif.html
templates/pages/: chat.html  evaluate.html  generate.html  knowledge.html  learning_path.html  os_lab.html  tutor.html
tests/: frontend-renderer.test.mjs  test_agents.py  test_frontend_smoke.py  test_knowledge_base.py  test_text_splitter.py
