[project]
name = "prlmad"
version = "0.1.0"
description = "Personalized Resource Learning Multi-Agent Demo for China Software Cup A3"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.36.0",
  "requests>=2.32.0",
  "pypdf>=4.0.0",
  "pymupdf>=1.24.0",
  "Pillow>=10.0.0",
  "rapidocr-onnxruntime>=1.3.24",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
